CHATS_SIT/force-app/main/default/objects/T_CCCAP_ADR__c.object
<CustomObject>
    <fields>
        <fullName>ADR_CITY__c</fullName>
        <description>City</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1__c</fullName>
        <description>Address Line 1</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_2__c</fullName>
        <description>Address Line 2</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE__c</fullName>
        <defaultValue>&apos;CO&apos;</defaultValue>
        <description>State</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_EXTN__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip Extn</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_ZIP_MAIN__c</fullName>
        <description>Zip</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_ADR__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>CCCAP Addresses</relationshipLabel>
        <relationshipName>CCCAP_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CCCAP Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCCAP Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Length_ZIP_eq_9</fullName>
        <active>true</active>
        <description>Length of the ZIP field equal to 5</description>
        <errorConditionFormula>AND(NOT(ISBLANK(ADR_ZIP_MAIN__c)), 
    OR( LEN(ADR_ZIP_MAIN__c) &lt;&gt; 5, 
        NOT(ISNUMBER(ADR_ZIP_MAIN__c)) 
    ) 
)</errorConditionFormula>
        <errorDisplayField>ADR_ZIP_MAIN__c</errorDisplayField>
        <errorMessage>Please provide the complete 5 digit Zip Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ZIP_Extension_4_digit</fullName>
        <active>true</active>
        <description>value must be 4 digits long</description>
        <errorConditionFormula>AND(
	NOT(ISBLANK(ADR_ZIP_EXTN__c)), 
	OR( 
		LEN(ADR_ZIP_EXTN__c) &lt;&gt; 4, 
		NOT(ISNUMBER(ADR_ZIP_EXTN__c)) 
	  ) 
)</errorConditionFormula>
        <errorDisplayField>ADR_ZIP_EXTN__c</errorDisplayField>
        <errorMessage>Please provide the complete 4 digit Zip extension</errorMessage>
    </validationRules>
</CustomObject>