CHATS_SIT/force-app/main/default/objects/T_CCCAP_ADR__c/validationRules/Length_ZIP_eq_9.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_ZIP_eq_9</fullName>
    <active>true</active>
    <description>Length of the ZIP field equal to 5</description>
    <errorConditionFormula>AND(NOT(ISBLANK(ADR_ZIP_MAIN__c)), 
    OR( LEN(ADR_ZIP_MAIN__c) &lt;&gt; 5, 
        NOT(ISNUMBER(ADR_ZIP_MAIN__c)) 
    ) 
)</errorConditionFormula>
    <errorDisplayField>ADR_ZIP_MAIN__c</errorDisplayField>
    <errorMessage>Please provide the complete 5 digit Zip Address</errorMessage>
</ValidationRule>