CHATS_SIT/force-app/main/default/objects/T_CCCAP_ADR__c/validationRules/ZIP_Extension_4_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>ZIP_Extension_4_digit</fullName>
    <active>true</active>
    <description>value must be 4 digits long</description>
    <errorConditionFormula>AND(
	NOT(ISBLANK(ADR_ZIP_EXTN__c)), 
	OR( 
		LEN(ADR_ZIP_EXTN__c) &lt;&gt; 4, 
		NOT(ISNUMBER(ADR_ZIP_EXTN__c)) 
	  ) 
)</errorConditionFormula>
    <errorDisplayField>ADR_ZIP_EXTN__c</errorDisplayField>
    <errorMessage>Please provide the complete 4 digit Zip extension</errorMessage>
</ValidationRule>